<resources>
    <string name="app_name">JiHyun</string>
    <string name="sign_in_title">welcome to JiHyun</string>
    <string name="sign_id">ID</string>
    <string name="sign_id_hint">아이디를 입력하세요</string>
    <string name="sign_password">Password</string>
    <string name="sign_password_hint">비밀번호를 입력하세요</string>
    <string name="sign_in_text">SIGN IN</string>
    <string name="sign_up_text">SIGN UP</string>
    <string name="sign_up_mbti">MBTI</string>
    <string name="sign_mbti_hint">MBTI를 입력하세요</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>